--- a/templates/try_html.html
+++ b/templates/try_html.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="{{url_for('static', filename='try_css.css')}}">
     <a href="https://www.google.co.jp">グーグルへのリンク</a>
 
 </head>
