--- a/templates/try_html.html
+++ b/templates/try_html.html
@@ -3,10 +3,12 @@
 <head>
     <link rel="stylesheet" href="{{url_for('static', filename='try_css.css')}}">
     <a href="https://www.google.co.jp">グーグルへのリンク</a>
+    <script src={{ url_for("static", filename="try_js.js") }}></script>
 
 </head>
 <body>
-    <table>
+    <table id="table_id">
+
         <tr>
         <th>見出し1</th>
         <th>見出し2</th>
@@ -18,7 +20,7 @@
         <td>内容3</td>
         ・</table>
         <input type="text" name="text" value="テキスト">
-<input type="button" name="button" value="ボタン">
+<input type="button" name="button" value="ボタン" onclick="change_table();">
 <input type="checkbox" name="check" value="チェックボックス1">
 <input type="radio name"="radio" value="ラジオボタン1">
 <input type="submit" name"="submit" value="送信">
